@@ -39,6 +39,7 @@ public class LibrarySeederService {
                 new BookWriterEntity(new BookWriter("Stephen King", "Stephen", 20)),
                 new BookWriterEntity(new BookWriter("Echo Chen", "San Mao", 23)),
                 new BookWriterEntity(new BookWriter("Cixin Liu", "Cixin", 18)),
+                new BookWriterEntity(new BookWriter("Autor","Menos tres libros",2))
         };
         this.bookWriterRepository.saveAll(Arrays.asList(bookWriters));
 
@@ -46,7 +47,8 @@ public class LibrarySeederService {
                 new BookEntity("Bellas durmientes", "9788401020414", LocalDate.of(2018, 2, 1), Arrays.asList(bookWriters[0], bookWriters[1])),
                 new BookEntity("El bosque oscuro", "9788413146454", LocalDate.of(2023, 4, 13), List.of(bookWriters[3])),
                 new BookEntity("Diarios de las canarias", "9788416738090", LocalDate.of(2017, 10, 4), List.of(bookWriters[2])),
-                new BookEntity("El problema de los tres cuerpos", "9788466659734", LocalDate.of(2016, 9, 28), List.of(bookWriters[3]))
+                new BookEntity("El problema de los tres cuerpos", "9788466659734", LocalDate.of(2016, 9, 28), List.of(bookWriters[3])),
+                new BookEntity("Libro con autor menos de tres libros", "9788888888888", LocalDate.of(2000, 10, 1), List.of(bookWriters[4]))
         };
         this.bookRepository.saveAll(Arrays.asList(books));
 
@@ -54,13 +56,15 @@ public class LibrarySeederService {
                 new LoanEntity("BD123", books[0], LocalDateTime.now(), LocalDateTime.now().plusDays(7), true),
                 new LoanEntity("EBO456", books[1], LocalDateTime.now().minusDays(10), LocalDateTime.now().minusDays(3), false),
                 new LoanEntity("DLC789", books[2], LocalDateTime.now().minusDays(4), LocalDateTime.now().plusDays(3), true),
-                new LoanEntity("EPLTC111", books[3], LocalDateTime.now().minusDays(17), LocalDateTime.now().plusDays(10), false)
+                new LoanEntity("EPLTC111", books[3], LocalDateTime.now().minusDays(17), LocalDateTime.now().plusDays(10), false),
+                new LoanEntity("LAMTL222",books[4],LocalDateTime.now().minusDays(1), LocalDateTime.now().plusDays(6),true)
         };
         this.loanRepository.saveAll(Arrays.asList(loans));
 
         LibraryEntity[] libraries = {
                 new LibraryEntity("Biblioteca Nacional", "Calle atocha 10", LocalDate.of(1996, 10, 1), Arrays.asList(books[0], books[2])),
-                new LibraryEntity("Biblioteca universitaria", "Calle universidad 20", LocalDate.of(1980, 1, 9), Arrays.asList(books[1], books[2], books[3]))
+                new LibraryEntity("Biblioteca universitaria", "Calle universidad 20", LocalDate.of(1980, 1, 9), Arrays.asList(books[1], books[2], books[3])),
+                new LibraryEntity("Biblioteca territorial", "Calle sol 1", LocalDate.of(2000,2,2),List.of(books[4]))
         };
         this.libraryRepository.saveAll(Arrays.asList(libraries));
 
